	* media: Allow adding/removing streams on the fly. (Jakub Adam) (half of
	  #13535)

	Gadu-Gadu:
	* Allow showing your status only to buddies. (Mateusz Piękos) (#13358)
	* Updated internal libgadu to version 1.10.1. (Mateusz Piękos, Krzysztof
	  Klinikowski) (#13525)
	* Suppress blank messages that happen when sending inline images. (Tomasz
	  Wasilczyk) (#13554)

	ICQ:
	* Fix unsetting your mood when "None" is selected. (#7431)
	* Ignore Daylight Saving Time when performing calculations related to
	  birthdays. (dustin) (#13533)
	* It is now possible to specify multiple encodings on the Advanced tab of
	  an ICQ account's settings by using a comma-delimited list.  (loentar)
	  (#13496)

	Plugins:
	* The Voice/Video Settings plugin now includes the ability to test
	  microphone settings. (Jakub Adam) (#13182)

	Windows-Specific Changes:
	* Fix building libpurple with Visual C++ .NET 2005. This was accidentally
	  broken in 2.7.11. (Florian Quèze)
	* Build internal libgadu without -mms-bitfields, fixing several
	  long-standing Gadu-Gadu issues. (#11958, #6297)

version 2.7.11 (03/10/2011):
	General:
	* Our bundled libgadu should now build on HP-UX.
	* Fix some instances of file transfers never completing. (Cristi Posoiu)
	  (#12472)

	Pidgin:
	* Sort by Status no longer causes buddies to move around when you
	  click them.
	* Fix embedding in the system tray on older GTK+ releases (such as on
	  CentOS 5.5 and older Fedora).
	* No longer require libstartup-notification for startup notification
	  support.  GTK+ has included support for years, so use it instead. (David
	  Benjamin) (#13245)

	AIM:
	* Fix a bug where some buddies from your buddy list might not show up.
	  Affected non-English ICQ users the most. (#13386)
	* Send keepalives for all types of network connections.  Will hopefully
	  make chat rooms more reliable. (#1449)

	MSN:
	* Fix bug that prevented added buddies to your buddy list in certain
	  circumstances.  (#13298)

	MXit: